crates/aranya-policy-compiler/tests/data/structs/undefined_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
2 |     let v = Bar {}
  |             ^^^ struct `Bar` not defined
